infra/kubeshark/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.org/websocket-services: "kubeshark-front"
  name: kubeshark-ingress
  namespace: default
spec:
  rules:
    - host: kubeshark.lab.danielsson.us.com
      http:
        paths:
          - backend:
              service:
                name: kubeshark-front
                port:
                  number: 80
            path: /
            pathType: Prefix
